--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -112,7 +112,7 @@ body {
 }
 
 #lista {
-    width: 250px;
+    width: 80%;
     font-size: 15px;
     display: flex;
     flex-direction: column;
@@ -121,7 +121,7 @@ body {
 
 #lista li {
     margin: 10px;
-    width: 300px;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -143,7 +143,7 @@ body {
 }
 
 #redes-sociais {
-    width: 250px;
+    width: 100%;
     height: 100px;
     display: flex;
     justify-content: space-evenly;
